--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -15,43 +15,48 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="2" column="1">
-     <layout class="QFormLayout" name="credentialsLayout">
-      <item row="1" column="0">
-       <widget class="QLabel" name="usernameLabel">
+    <item row="4" column="1">
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="0" column="1">
+       <widget class="QPushButton" name="startButton">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="text">
-         <string>Имя пользователя:</string>
+         <string>Начать работу</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
-       <widget class="QLineEdit" name="usernameLineEdit"/>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="masterpasswordLabel">
-        <property name="text">
-         <string>Мастер-пароль:</string>
+      <item row="0" column="2">
+       <widget class="QPushButton" name="newFileButton">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
         </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QLineEdit" name="masterpasswordLineEdit"/>
-      </item>
-      <item row="4" column="0">
-       <widget class="QPushButton" name="OpenFileButton">
         <property name="text">
-         <string>Выбрать файл</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1">
-       <widget class="QLabel" name="openFileLabel">
-        <property name="text">
-         <string>Файл не выбран</string>
+         <string>Новый файл</string>
         </property>
        </widget>
       </item>
      </layout>
+    </item>
+    <item row="4" column="0">
+     <spacer name="verticalSpacer_3">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
     </item>
     <item row="2" column="0">
      <spacer name="verticalSpacer">
@@ -66,23 +71,17 @@
       </property>
      </spacer>
     </item>
-    <item row="3" column="0">
-     <spacer name="verticalSpacer_3">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>40</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="3" column="1">
-     <layout class="QGridLayout" name="gridLayout_2">
-      <item row="0" column="0">
-       <widget class="QPushButton" name="startButton">
+    <item row="2" column="1">
+     <layout class="QFormLayout" name="credentialsLayout">
+      <item row="8" column="1">
+       <widget class="QLabel" name="openFileLabel">
+        <property name="text">
+         <string>Файл не выбран</string>
+        </property>
+       </widget>
+      </item>
+      <item row="8" column="0">
+       <widget class="QPushButton" name="OpenFileButton">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
           <horstretch>0</horstretch>
@@ -90,9 +89,19 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>Начать работу</string>
+         <string>Выбрать файл</string>
         </property>
        </widget>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="masterpasswordLabel">
+        <property name="text">
+         <string>Мастер-пароль:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QLineEdit" name="masterpasswordLineEdit"/>
       </item>
      </layout>
     </item>
