--- a/src/passwordswindow.ui
+++ b/src/passwordswindow.ui
@@ -14,6 +14,72 @@
    <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <item row="2" column="2">
+    <widget class="QRadioButton" name="radioButton_1">
+     <property name="text">
+      <string>Только цифры</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="2">
+    <widget class="QRadioButton" name="radioButton_2">
+     <property name="text">
+      <string>Все символы ASCII</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="2" colspan="2">
+    <widget class="QPushButton" name="generatePasswordButton">
+     <property name="text">
+      <string>Сгенерировать случайный пароль</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0" colspan="2">
+    <widget class="QPushButton" name="addGroupButton">
+     <property name="text">
+      <string>Добавить группу</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" rowspan="12" colspan="2">
+    <widget class="QScrollArea" name="passwordsScrollArea">
+     <property name="widgetResizable">
+      <bool>true</bool>
+     </property>
+     <widget class="QWidget" name="scrollAreaWidgetContents_2">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>395</width>
+        <height>449</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
+   </item>
+   <item row="0" column="3">
+    <widget class="QPushButton" name="exportButton">
+     <property name="text">
+      <string>Сохранить файл как</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="2">
+    <widget class="QPushButton" name="changeMasterPassword">
+     <property name="text">
+      <string>Сменить мастер-пароль</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="2">
+    <widget class="QRadioButton" name="radioButton_3">
+     <property name="text">
+      <string>Буквы и спецсимволы</string>
+     </property>
+    </widget>
+   </item>
    <item row="3" column="3">
     <widget class="QComboBox" name="passwordLengthcomboBox">
      <item>
@@ -273,80 +339,14 @@
      </item>
     </widget>
    </item>
-   <item row="1" column="2" colspan="2">
-    <widget class="QPushButton" name="generatePasswordButton">
-     <property name="text">
-      <string>Сгенерировать случайный пароль</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0" rowspan="8" colspan="2">
-    <widget class="QScrollArea" name="passwordsScrollArea">
-     <property name="widgetResizable">
-      <bool>true</bool>
-     </property>
-     <widget class="QWidget" name="scrollAreaWidgetContents_2">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>398</width>
-        <height>457</height>
-       </rect>
-      </property>
-     </widget>
-    </widget>
-   </item>
-   <item row="0" column="3">
-    <widget class="QPushButton" name="exportButton">
-     <property name="text">
-      <string>Сохранить файл как</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="2">
-    <widget class="QRadioButton" name="radioButton_1">
-     <property name="text">
-      <string>Только цифры</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0" colspan="2">
-    <widget class="QPushButton" name="addGroupButton">
-     <property name="text">
-      <string>Добавить группу</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="2">
-    <widget class="QPushButton" name="changeMasterPassword">
-     <property name="text">
-      <string>Сменить мастер-пароль</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="2">
-    <widget class="QRadioButton" name="radioButton_3">
-     <property name="text">
-      <string>Буквы и спецсимволы</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="2">
-    <widget class="QRadioButton" name="radioButton_2">
-     <property name="text">
-      <string>Только буквы</string>
-     </property>
-    </widget>
-   </item>
-   <item row="6" column="2" colspan="2">
+   <item row="5" column="2" colspan="2">
     <widget class="QLabel" name="generatedPasswordLabel">
      <property name="text">
       <string/>
      </property>
     </widget>
    </item>
-   <item row="7" column="2" colspan="2">
+   <item row="6" column="2" colspan="2">
     <widget class="QPushButton" name="aboutButton">
      <property name="text">
       <string>Как пользоваться приложением</string>
